# singularity-code-analysis

./: .envrc  .gitignore  .mise.toml  AGENTS.md  ASSESSMENT_INDEX.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DATABASE_INTEGRATION_GUIDE.md  ELIXIR_SCA_INTEGRATION_COMPLETE.md  LIBRARY_SUMMARY.md  POSTGRESQL_INTEGRATION_GUIDE.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READINESS_SUMMARY.md  README.md  RELEASE_REVIEW_v0.1.0.md  SECURITY.md  TEST_FAILURE_CATEGORIZATION.md  flake.nix  mix.exs
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: BEAM_SUPPORT.md  KNOWN_TEST_ISSUES.md  QUICK_REFERENCE.md  QUICK_START.md
docs/development/: ACTIONABLE_FIXES_SUMMARY.md  ANALYSIS_COMPLETE.md  ANALYSIS_SUMMARY.md  BEST_IN_CLASS_SUMMARY.md  BOOLEAN_OPERATOR_INVESTIGATION.md  ELIXIR_SCA_INTEGRATION_ANALYSIS.md  FINAL_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INSIGHT_METRICS_ANALYSIS.md  PHASE1_IMPLEMENTATION_GUIDE.md  PRODUCTION_READINESS_ASSESSMENT.md  QUICK_FIXES.md  README_ANALYSIS.md  REAL_IMPLEMENTATION_SUMMARY.md  ROOT_CAUSE_ANALYSIS_FINAL.md  ROOT_CAUSE_SUMMARY.md  RUST_AI_CLEANUP_SUMMARY.md  TEST_FAILURES_ANALYSIS.md  TEST_FAILURE_ANALYSIS.md
enums/: BUILD.bazel  Cargo.toml
enums/src/: main.rs
examples/: debug_python_ast.rs  inspect_elixir.rs  inspect_erlang.rs  inspect_gleam.rs  inspect_python.rs
lib/: singularity_code_analysis.ex
singularity-code-analysis-book/: book.toml  deploy-to-GitHub-Pages
singularity-code-analysis-book/src/: README.md  SUMMARY.md  languages.md  metrics.md
singularity-code-analysis-book/src/commands/: README.md  metrics.md  nodes.md  rest.md
singularity-code-analysis-book/src/developers/: README.md  loc.md  new-language.md  update-grammars.md
src/: alterator.rs  ast.rs  c_macro.rs  checker.rs  code_analyzer.rs  comment_rm.rs  concurrent_files.rs  count.rs  find.rs  function.rs  getter.rs  getter.rs.backup  langs.rs  lib.rs  macros.rs  nif.rs  node.rs  ops.rs  parser.rs  parser_registry.rs  preproc.rs  spaces.rs  tools.rs  traits.rs
src/analysis/: code_evolution_tracker.rs  complexity_calculator.rs  quality_predictor.rs  semantic_analyzer.rs
src/c_langs_macros/: mod.rs
src/languages/: language_ccomment.rs  language_cpp.rs  language_csharp.rs  language_elixir.rs  language_erlang.rs  language_gleam.rs  language_go.rs  language_java.rs  language_javascript.rs  language_kotlin.rs  language_lua.rs  language_mozjs.rs  language_preproc.rs  language_python.rs  language_rust.rs  language_tsx.rs  language_typescript.rs
src/metrics/: abc.rs  cognitive.rs  cyclomatic.rs  exit.rs  halstead.rs  insight_metrics.rs  loc.rs  mi.rs  mod.rs  nargs.rs  nom.rs  npa.rs  npm.rs  wmc.rs
src/metrics/ai_metrics/: error_handling.rs  semantic_complexity.rs
src/metrics/insight_metrics/: code_smell_density.rs  composite_code_quality.rs  database_enriched.rs  dependency_coupling.rs  postgresql_enriched.rs  refactoring_readiness.rs  semantic_complexity.rs  testability_score.rs  type_safety.rs
src/output/: dump.rs  dump_metrics.rs  dump_ops.rs
tests/: test_beam_simple.rs
tests/common/: mod.rs
