[package]
name = "singularity-code-analysis"
version = "0.1.0"
authors = ["Singularity Contributors", "PrimeCode Team"]
edition = "2021"
description = "Multi-language code analysis library with metrics, complexity analysis, and AI-powered insights"
license = "MIT OR Apache-2.0"
keywords = ["metrics", "complexity", "analysis", "ai"]
repository = "https://github.com/mikkihugo/singularity-code-analysis"
categories = ["development-tools", "parsing"]

[lib]
name = "singularity_code_analysis"
crate-type = ["rlib", "cdylib"]

[dependencies]
aho-corasick = "1.0"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
globset = "0.4"
num = "0.4"
num-derive = "0.4"
num-format = "0.4"
petgraph = "0.6"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
termcolor = "1.2"
walkdir = "2.0"

tree-sitter = "0.25"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-cpp = "0.23"
# BEAM languages
tree-sitter-elixir = "0.3"
tree-sitter-erlang = "0.15"
tree-sitter-gleam = "1.0"
# Lua
tree-sitter-lua = "0.2"
# Go and C#
tree-sitter-go = "0.23"
tree-sitter-c-sharp = "0.23"
# Kotlin
tree-sitter-kotlin-ng = "1.1"
num-traits = "0.2"

# NIF support (optional - only when used from Elixir)
rustler = { version = "0.35", optional = true }

[features]
default = []
ai-metrics = []
nif = ["rustler"]

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "json", "redactions"] }
pretty_assertions = "1.3"
