[package]
name = "singularity-analysis-engine"
version = "0.1.0"
authors = ["Singularity Contributors", "PrimeCode Team"]
edition = "2024"
description = "Multi-language code analysis engine with metrics, complexity analysis, and AI-powered insights"
license = "MIT OR Apache-2.0"
keywords = ["metrics", "complexity", "analysis", "ai"]
repository = "https://github.com/mikkihugo/singularity-code-analysis"
categories = ["development-tools", "parsing"]

# Mark as standalone crate (not part of parent workspace)
[workspace]

[lib]
name = "singularity_analysis_engine"
crate-type = ["rlib", "cdylib"]

[dependencies]
aho-corasick = "1.0"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
globset = "0.4"
num = "0.4"
num-derive = "0.4"
num-format = "0.4"
petgraph = "0.8"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
termcolor = "1.2"
walkdir = "2.0"

tree-sitter = "0.25.10"
tree-sitter-java = "0.23.5"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-cpp = "0.23.4"
# BEAM languages
tree-sitter-elixir = "0.3"
tree-sitter-erlang = "0.15"
tree-sitter-gleam = "1.0"
# Lua
tree-sitter-lua = "0.2"
# Go and C#
tree-sitter-go = "0.25.0"
tree-sitter-c-sharp = "0.23.1"
# Kotlin
tree-sitter-kotlin-ng = "1.1.0"
num-traits = "0.2"

# Language registry (shared across all engines)
singularity-language-registry = { git = "https://github.com/Singularity-ng/singularity-language-registry", tag = "v0.1.0" }

# NIF support (optional - only when used from Elixir)
rustler = { version = "0.37", optional = true }

# CLI dependencies (optional - only for binary)
clap = { version = "4.5", features = ["derive", "cargo", "env"], optional = true }
anyhow = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
indicatif = { version = "0.17", optional = true }
comfy-table = { version = "7.1", optional = true }
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }

[features]
default = []
insight-metrics = []
nif = ["rustler"]
cli = ["clap", "anyhow", "serde_json", "indicatif", "comfy-table", "env_logger", "log"]

[[bin]]
name = "singularity-rca"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "json", "redactions"] }
pretty_assertions = "1.3"

[lints.rust]
unsafe_code = "warn"  # Allow unsafe with proper documentation
missing_docs = "warn"

[lints.clippy]
# Lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Deny critical issues
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
mem_forget = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
result_large_err = "deny"
lossy_float_literal = "deny"

# Allow reasonable exceptions to pedantic lints
module_name_repetitions = "allow"
inline_always = "allow"
float_cmp = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
default_trait_access = "allow"
