load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_doc_test")
load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "enums",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    deps = all_crate_deps(),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_test(
    name = "enums_test",
    crate = ":enums",
    deps = all_crate_deps(test = True),
)

rust_doc_test(
    name = "enums_doc_test",
    crate = ":enums",
)
