[package]
name = "enums"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4.5", features = ["derive"] }
convert_case = "0.6"
indexmap = "2"
indoc = "2"
itertools = "0.12"
tree-sitter = "0.20.10"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-elixir = "0.3.4"
tree-sitter-erlang = "0.15.0"
tree-sitter-gleam = "1.0.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-lua = "0.2.0"
tree-sitter-mozjs = "0.20.1"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-language = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
# Lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Deny critical issues
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
mem_forget = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
result_large_err = "deny"
lossy_float_literal = "deny"

# Allow reasonable exceptions to pedantic lints
module_name_repetitions = "allow"
inline_always = "allow"
float_cmp = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
default_trait_access = "allow"
